--- a/scss/pages/galinheiro.scss
+++ b/scss/pages/galinheiro.scss
@@ -8,6 +8,12 @@
         }
     }
 
+    .croxo-galinheiro--main-wrapper__events-list__past {
+        >h1 {
+            width: fit-content;
+        }
+    }
+
     .croxo-galinheiro--main-wrapper__events-list__future__title-container {
         .events-list-slide-to {
             span {
