address issues with Maria

--- a/scss/components/croxoGallery.scss
+++ b/scss/components/croxoGallery.scss
@@ -105,6 +105,7 @@
 		.croxo-gallery__lightbox__img-placeholder {
 			background: var(--croxo-gallery-focused);
 			height: auto;
+			max-height: 80dvh;
 			width: 90vw;
 
 			@include media-breakpoint-up(md) {
