--- a/scss/forms/contactForm.scss
+++ b/scss/forms/contactForm.scss
@@ -4,13 +4,13 @@
     background-color: rgba(255, 255, 255, 0.8);
     bottom: 0;
     display: flex;
-    height: 100vh;
+    height: 100dvh;
     justify-content: center;
     left: 0;
     position: fixed;
     right: 0;
     top: 0;
-    width: 100vw;
+    width: 100dvw;
     z-index: 3;
 
     .croxo-contact-form__form-wrapper {
@@ -19,18 +19,18 @@
         display: flex;
         flex-direction: column;
         row-gap: 9px;
-        width: 90vw;
+        width: 90dvw;
 
         @include media-breakpoint-up(lg) {
             row-gap: 18px;
         }
 
         @include media-breakpoint-up(lg) {
-            width: 70vw;
+            width: 70dvw;
         }
 
         @include media-breakpoint-up(xl) {
-            width: 40vw;
+            width: 40dvw;
         }
 
         &.message-sent {
