--- a/style.css
+++ b/style.css
@@ -31744,7 +31744,11 @@ body .croxo-body-wrapper {
   overflow-x: hidden;
   overflow-y: scroll;
   scroll-behavior: smooth;
+  transition: background-color 650ms;
   width: 100dvw;
+}
+body .croxo-body-wrapper.on-past-list {
+  background-color: rgb(235, 235, 235);
 }
 
 /*# sourceMappingURL=style.css.map */
