--- a/style.css
+++ b/style.css
@@ -30956,6 +30956,9 @@ progress {
   font-size: 18px;
 }
 
+.croxo-footer {
+  background-color: white;
+}
 .croxo-footer .footer-inner {
   max-width: unset;
 }
@@ -31161,6 +31164,7 @@ progress {
 }
 
 .croxo-calendar-day {
+  background-color: white;
   border-width: 4px;
   border-top-width: 2px;
 }
