--- a/style.css
+++ b/style.css
@@ -30597,6 +30597,11 @@ progress {
   }
 }
 
+.tilt-x-8 {
+  margin-left: -8px;
+  margin-right: -8px;
+}
+
 .transform-reflect-horizontal {
   -webkit-transform: scaleX(-1);
   transform: scaleX(-1);
