fix event calendar item styles

--- a/scss/_lists.scss
+++ b/scss/_lists.scss
@@ -266,6 +266,10 @@
       }
     }
 
+    .disco_title__paragraph {
+      font-size: 24px;
+    }
+
     .disco_title__excerpt {
       font-size: 18px;
       padding-top: 0;
